--- a/estilos/style.css
+++ b/estilos/style.css
@@ -62,6 +62,9 @@ nav > a{
     font-weight: bold;
     text-decoration: none;
 }
+nav>a:visited, nav>a:active{
+    color: var(--cor0);
+}
 nav>a:hover{
     text-shadow: none;
     background-color: var(--cor3);
